--- a/CSS_Day1/text.html
+++ b/CSS_Day1/text.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Text</title>
+    <title>Colors</title>
     <link rel='stylesheet' href='stilovi.css' type='text/css'>
 </head>
 
@@ -35,10 +35,38 @@
         remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
         Lorem Ipsum passages, and more recently with deDVDSFGsktop publishing software like Aldus PageMaker including
         versions
-        of Lorem Ipsum.>
+        of Lorem Ipsum.
     </p>
-
+<div class='opacity'>
     <img src='../project_html/images/bart/bart.gif' alt='bart'>
+</div>
+<div class='rgba'>
+    <img src='../project_html/images/bart/bart2.gif' alt='bart2'>
+</div>
+<br><br><br>
+<table border="black" width='960' height='500'>
+    <tr>
+        <td>dfsdfdsf</td>
+        <td>sdfsdfsd</td>
+        <td>sdfsdf</td>
+        <td>sdfsdf</td>
+        <td>sdfsdf</td>
+    </tr>
+    <tr>
+            <td>sdfsdf</td>
+            <td>sdfsdf</td>
+            <td>sdfsdf</td>
+            <td>sdfsdf</td>
+            <td>sdfdsf</td>
+        </tr>
+        <tr>
+                <td>sdfsdf</td>
+                <td>sdfsd</td>
+                <td>sdfdsf</td>
+                <td>sdfsdf</td>
+                <td>sdfsdf</td>
+            </tr>
+</table>
 </body>
 
 </html>
