--- a/CSS_Day2/fonts.html
+++ b/CSS_Day2/fonts.html
@@ -47,7 +47,7 @@
         comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by
         Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.
         The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-    </p>-->
+    </p>
 
 
     <h1>Lorem Ipsum</h1>
@@ -85,7 +85,14 @@
         therefore always free from repetition, injected humour, or non-characteristic words etc.
     </p>
 
+-->
+
+<ul class="listOfLinks"><b>List of sites:</b>
+    <li><a href="https://www.nytimes.com/">NY Times</a></li>
+    <li><a href="https://www.bbc.com">BBC</a></li>
+    <li><a href="https://www.lemonde.fr/">Le Monde</a></li>
+</ul>
 
 </body>
 
-</html>
+</ht>
