--- a/CSS_Day2/fonts.html
+++ b/CSS_Day2/fonts.html
@@ -87,12 +87,12 @@
 
 -->
 
-<ul class="listOfLinks"><b>List of sites:</b>
-    <li><a href="https://www.nytimes.com/">NY Times</a></li>
-    <li><a href="https://www.bbc.com">BBC</a></li>
-    <li><a href="https://www.lemonde.fr/">Le Monde</a></li>
+<ul><b>List of sites:</b>
+    <li><a href="https://www.b92.net/">B92</a></li>
+    <li><a href="https://www.youtube.com/">Youtube</a></li>
+    <li><a href="https://lenta.ru">Lenta</a></li>
 </ul>
+
 
 </body>
 
-</ht>
