finished css exercises

--- a/Week2_Day3_CSS/fonts.html
+++ b/Week2_Day3_CSS/fonts.html
@@ -87,12 +87,13 @@
 
 -->
 
-<ul><b>List of sites:</b>
+<p>List of sites:</p>
+<ul>
     <li><a href="https://www.b92.net/">B92</a></li>
     <li><a href="https://www.youtube.com/">Youtube</a></li>
     <li><a href="https://lenta.ru">Lenta</a></li>
 </ul>
 
-
 </body>
+</html>
 
