--- a/Week2_Day2_CSS/index.html
+++ b/Week2_Day2_CSS/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
     <head>
-        <title>Applyign css</title>
+        <title>Applying css</title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
