finished css exercises Layout

--- a/Week3_Day1_CSS/layout2.html
+++ b/Week3_Day1_CSS/layout2.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Advanced</title>
+    <title>Advanced Positioning</title>
     <link type="text/css" rel="stylesheet" href="layout2.css">
 </head>
 
 <body>
-    <div>
-        <ul class="mainList">
-            <li id="firstCell">Home</li>
-            <li>Meni 1</li>
-            <li class="meni2">Meni 2<ul>
-                    <li class="submeni1">Sub meni 1</li>
-                    <li class="submeni2">Sub meni 2</li>
-                    <li class="submeni3">Sub meni 3</li>
+        <ul class="menu">
+            <li class="active"><a href = "https://lenta.ru/">Home</a></li>
+            <li><a href = "https://mail.ru/">Menu 1</a>
+            <li><a href = "https:/yandex.ru/">Menu 2</a>
+                <ul>
+                    <li><a href = "https://www.b92.net/">Sub Menu 1</a></li>
+                    <li><a href = "https://www.youtube.com">Sub Menu 2</a></li>
+                    <li><a href = "https://www.facebook.com/">Sub Menu 3</a></li>
                 </ul>
             </li>
-            <li>Meni 3
-            </li>
-
+            <li><a href = "https://www.rambler.ru">Menu 3</a></li>
         </ul>
-    </div>
 </body>
 
 </html>
