--- a/Week3_Day1_CSS/overlapping.html
+++ b/Week3_Day1_CSS/overlapping.html
@@ -6,20 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>overlaping</title>
-    <link type="text/css" rel="stylesheet" href="overlaping.css">
+    <link type="text/css" rel="stylesheet" href="overlapping.css">
 </head>
 
 <body>
+
+    <div class="div4">
+
+
+    </div>
+    <div class="div5">
+
+    </div>
+    <div class="div6">
+
+    </div>
+
+
+
     <div class="div1">
 
 
-    </div>
-    <div class="div2">
+        </div>
+        <div class="div2">
+    
+        </div>
+        <div class="div3">
+    
+        </div>
 
-    </div>
-    <div class="div3">
 
-    </div>
 
 
 </body>
