correction of exercise

--- a/Week3_Day2_CSS/float.html
+++ b/Week3_Day2_CSS/float.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <div id="main">
-        <div id="nav">
+    <div id="main" class="cf">
+        <div id="nav" class="cf">
             <ul>
                 <li>Blog</li>
                 <li>Contact</li>
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    <div class="footer"><p>© BitStudent</p></div>
+    <div class="foot"><p>© BitStudent</p></div>
 
 
 
