--- a/Week3_Day3_CSS/index2310.html
+++ b/Week3_Day3_CSS/index2310.html
@@ -114,7 +114,7 @@
         </main>
     </div>
     <footer>
-        <p id="bit"> &copy; BitStudent</p>
+        <p> &copy; BitStudent</p>
     </footer>
 </body>
 
