--- a/Week3_Day3_CSS/mock.html
+++ b/Week3_Day3_CSS/mock.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mck</title>
+    <title>Mock</title>
     <link rel="stylesheet" type="text/css" href="mock.css">
 </head>
 
 <body>
 
-    <header>
+    <header class="clearfix">
         <img src="krug.svg" alt="krug">
         <div id="tekst">
             <h1>Howard Alexander</h1>
@@ -19,7 +19,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="clearfix">
         <div id="levi">
             <h2>About</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus minus velit fugiat maxime? Totam autem
