--- a/Week3_Day2_CSS/float.html
+++ b/Week3_Day2_CSS/float.html
@@ -42,7 +42,7 @@
 
         <div id="box3">
             <ul>
-                <li>Rebulding slack.com</li>
+                <li>Rebuilding slack.com</li>
                 <hr>
                 <li>Zasto bootcamp format</li>
                 <hr>
