--- a/Week3_Day3_CSS/index2310.html
+++ b/Week3_Day3_CSS/index2310.html
@@ -8,26 +8,29 @@
 
 <body>
     <div id="veliki" class="cf">
-        <header>
-            <nav>
+        <header class="cf">
+            <nav class="cf"> 
+            <ul>
                 <li class="item">Blog</li>
                 <li class="item">Contact</li>
                 <li class="item">About</li>
                 <li class="item">Home</li>
+            </ul>
             </nav>
         </header>
         <section><img src="./imgs/a.jpg" alt=""></section>
+    
         <aside>
-            <ul>
+            <ul class="cf">
                 <li class="lista"><a href="">Rebuilding slack.com</a></li>
                 <li class="lista"><a href="">Zasto bootcamp format?</a></li>
                 <li class="lista"><a href="">React-prozor u svet web aplikacija</a></li>
                 <li class="lista"><a href="">Najvece zablude o programerima u Srbiji</a></li>
             </ul>
         </aside>
-        <main>
+        <main class="cf">
 
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus deserunt cumque
                     architecto! Esse pariatur reprehenderit laborum ipsum, possimus perspiciatis explicabo animi ea ab
@@ -36,7 +39,7 @@
                     Ducimus
                     veniam velit ab atque, dolor expedita iusto!</p>
             </article>
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus deserunt cumque
                     architecto! Esse pariatur reprehenderit laborum ipsum, possimus perspiciatis explicabo animi ea ab
@@ -45,7 +48,7 @@
                     Ducimus
                     veniam velit ab atque, dolor expedita iusto!</p>
             </article>
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus deserunt cumque
                     architecto! Esse pariatur reprehenderit laborum ipsum, possimus perspiciatis explicabo animi ea ab
@@ -54,7 +57,7 @@
                     Ducimus
                     veniam velit ab atque, dolor expedita iusto!</p>
             </article>
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus deserunt cumque
                     architecto! Esse pariatur reprehenderit laborum ipsum, possimus perspiciatis explicabo animi ea ab
@@ -63,7 +66,7 @@
                     Ducimus
                     veniam velit ab atque, dolor expedita iusto!</p>
             </article>
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus deserunt
                     cumque
@@ -75,7 +78,7 @@
                     Ducimus
                     veniam velit ab atque, dolor expedita iusto!</p>
             </article>
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus
                     deserunt cumque
@@ -87,7 +90,7 @@
                     Ducimus
                     veniam velit ab atque, dolor expedita iusto!</p>
             </article>
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus
                     deserunt cumque
@@ -99,7 +102,7 @@
                     Ducimus
                     veniam velit ab atque, dolor expedita iusto!</p>
             </article>
-            <article>
+            <article class="cf">
                 <img src="./imgs/300x200.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea minima dolorem minus
                     deserunt cumque
@@ -115,7 +118,9 @@
     </div>
     <footer>
         <p> &copy; BitStudent</p>
+
     </footer>
+
 </body>
 
 </html>
