project css continued

--- a/Week3_Day4_Day5_Project_CSS/project2.html
+++ b/Week3_Day4_Day5_Project_CSS/project2.html
@@ -8,24 +8,24 @@
 </head>
 
 <body>
-    <div id="main-wrapper" class="cf">
-        <header class="cf">
-            <h2><span>BUILD</span> ESTATE</h2>
-            <nav>
-                <ul class="cf">
-                    <li>HOME</li>
-                    <li>ABOUT</li>
-                    <li>SERVICES</li>
-                    <li>CONTACT US</li>
-                </ul>
-            </nav>
 
-            <div id="headMain" class="cf">
-                <p>WE SHAPE OUR BUILDINGS THEREAFTER THEY SHAPE <br> US</p>
-                <span id="blueBox">Read More</span>
-            </div>
+    <header class="cf">
+        <h2><span>BUILD</span> ESTATE</h2>
+        <nav>
+            <ul class="cf">
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>SERVICES</li>
+                <li>CONTACT US</li>
+            </ul>
+        </nav>
 
-        </header>
+        <div id="headMain" class="cf">
+            <p>WE SHAPE OUR BUILDINGS THEREAFTER THEY SHAPE <br> US</p>
+            <span id="blueBox">Read More</span>
+        </div>
+
+    </header>
 
 
 
@@ -34,10 +34,16 @@
 
 
 
-    <main>
+    <main class="cf">
 
-        <div class="middleDiv" class="cf">
-            <div id="whoweare"><img src="./pictures/nestolepo.png"></div>
+
+
+        <div class="razd">
+            <h3>Who We Are</h3>
+            <hr>
+        </div>
+
+        <div id="firstUnder" class="cf">
             <article class="main1" class="cf">
                 <h4>Welcome To Our Build Estate</h4>
                 <p>"If you can build buildings, why sit on the beach? We always think of buildings in their
@@ -64,13 +70,68 @@
                     <li>New Residential Complex Features.</li>
                 </ul>
             </article>
+
         </div>
 
 
+
+        <div class="razd">
+            <h3>What People Says</h3>
+            <hr>
+        </div>
+
+        <div id="secondUnder" class="cf">
+            <article class="main2">
+                <ul class="cf">
+                    <li><img src="./pictures/t1.jpg" class="image"></li>
+                    <li>WILLIAMSON<br>
+                        <img src="./pictures/stars.png" class="stars"></li>
+                </ul>
+                <p>Nam tempus lobortis sem non ornare. Cubrabitur dignissim interdum sem, et mollis lorem. Mauris
+                    hendrerit, mi in aliquet egestas, nisi mi turpis.</p>
+            </article>
+            <article class="main2">
+                <ul class="cf">
+                    <li><img src="./pictures/t2.jpg" class="image"></li>
+                    <li>JENNIFER LOPEZ<br>
+                        <img src="./pictures/stars.png" class="stars"></li>
+                </ul>
+                <p>Nam tempus lobortis sem non ornare. Cubrabitur dignissim interdum sem, et mollis lorem. Mauris
+                    hendrerit, mi in aliquet egestas, nisi mi turpis.</p>
+            </article>
+            <article class="main2">
+                <ul class="cf">
+                    <li><img src="./pictures/t3.jpg" class="image"></li>
+                    <li>SELENA GOMEZ<br>
+                        <img src="./pictures/stars.png" class="stars"></li>
+                </ul>
+                <p>Nam tempus lobortis sem non ornare. Cubrabitur dignissim interdum sem, et mollis lorem. Mauris
+                    hendrerit, mi in aliquet egestas, nisi mi turpis.</p>
+
+            </article>
+
+        </div>
+
+        <div class="razd">
+            <h3>Get In Touch With Us</h3>
+            <hr>
+        </div>
+
+        <div id="iFrame">
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d254508.51641062117!2d-74.24789190683227!3d4.648283717717461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9bfd2da6cb29%3A0x239d635520a33914!2sBogota%2C%20Colombia!5e0!3m2!1sen!2srs!4v1571999189320!5m2!1sen!2srs"
+                frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <article><img src=></article>
+
+            <ul class="contactPage">
+                <li id="contact"></li>
+                <li id="connect"></li>
+                <li id="address"></li>
+                <li id="house"><img src="./pictures/house.png"> </li>
+            </ul>
+        </div>
     </main>
-
-
-
 </body>
 
 </html>
