added changes to css project

--- a/Project_CSS_Continued/project2.html
+++ b/Project_CSS_Continued/project2.html
@@ -5,6 +5,7 @@
     <title>BUILDESTATE</title>
     <link rel="stylesheet" type="text/css" href="project2.css">
     <meta name="viewport" content="width=device-width" , initial-scale=1.0>
+    <link rel="icon" type="image/ico" href="pictures/favicon.ico">
 </head>
 
 <body>
