--- a/Week1_HTML_exercises/forma.html
+++ b/Week1_HTML_exercises/forma.html
@@ -15,7 +15,7 @@
     </form>
 <br>
     <button type="submit">
-        <img src="save.gif" alt="Save icon"/ height ="10" widht="10">
+        <img src="save.gif" alt="Save icon" height ="10" widht="10">
         <br/>
         Save
         </button>
