--- a/Week3_Day2_CSS/float.html
+++ b/Week3_Day2_CSS/float.html
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    <div class="foot"><p>© BitStudent</p></div>
+    <div class="foot"><p>&copy BitStudent</p></div>
 
 
 
