--- a/Zoran_Projekat_CSS/index.html
+++ b/Zoran_Projekat_CSS/index.html
@@ -143,7 +143,7 @@
             <li class="footer_item"><a href="home">Services</a></li>
             <li class="footer_item"><a href="stats">Stats</a></li>
             <li class="footer_item"><a href="agents">Agents</a></li>
-            <li class="footer_item"><a href="testemonials">Testemonials</a></li>
+            <li class="footer_item"><a href="testimonials">Testimonials</a></li>
         </ul>
         <p><i class="fa fa-copyright"></i> 2017 Build Estate. All Rights Reserved</p>
       </div>
