--- a/Project_CSS_Responsive/project2.html
+++ b/Project_CSS_Responsive/project2.html
@@ -177,7 +177,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="copyright">© 2017 Build Estate. All Rights Reserved</div>
+        <div class="copyright">&copy; 2017 Build Estate. All Rights Reserved</div>
     </footer>
 </body>
 
