--- a/Week4_Day3_CSS/index.html
+++ b/Week4_Day3_CSS/index.html
@@ -67,9 +67,9 @@
 
         <!---4th row with underline and star--->
         <div class="row" id="fourth">
-            <div class="col-12">
+            <div class="col-xl-12">
                 <span class="underline-left"></span>
-                <i class="fa fa-star star"></i>
+                <i class="fa fa-star star1"></i>
                 <span class="underline-right"></span>
 
             </div>
@@ -93,22 +93,22 @@
 
         <!--7th row underline and star-->
         <div class="row">
-            <div class="col-12">
-                <div class="underline">
-                    <div class="left"></div>
-                    <div class="star"></div>
-                    <div class="right"></div>
-                </div>
+            <div class="xl-col-12">
+                <span class="line_left1"></span>
+                <i class="fa fa-star star2"></i>
+                <span class="line_right1"></span>
             </div>
-
         </div>
 
-        <!--8th row with boxes------------>
-        <div class="row">
-            <div class="col-3"></div>
+
+    </div>
+
+    <!--8th row with boxes------------>
+    <div class="row">
+        <div class="col-3"></div>
 
 
-        </div>
+    </div>
 
 
 
