--- a/Week2_Day1_Project_HTML/admin/create_new.html
+++ b/Week2_Day1_Project_HTML/admin/create_new.html
@@ -60,7 +60,7 @@
                 <td></td>
                 <td>
                     <fieldset>
-                        <legend>Reward</legend>
+                        <legend>Description</legend>
                         <label>
                             Aliases: <br> <input type='text' name='aliases' size='15' maxlength='30'> <br>
                         </label>
@@ -68,7 +68,7 @@
                             Birth: <br> <input type='text' name='birth' size='15' maxlength='30'> <br>
                         </label>
                         <label>
-                            Heir: <br> <input type='text' name='heir' size='15' maxlength='30'> <br>
+                            Hair: <br> <input type='text' name='hair' size='15' maxlength='30'> <br>
                         </label>
                         <label>
                             Eyes: <br> <input type='text' name='eyes' size='15' maxlength='30'> <br>
