--- a/Week2_Day1_Project_HTML/posters/bart.html
+++ b/Week2_Day1_Project_HTML/posters/bart.html
@@ -20,7 +20,7 @@
 
             <td border='1' width='960' align='center'><img src='../images/bart/wanted.png' width='960'>
                 <br>
-                <h2>FOR QUESTIONING IN CONNECTION WITH THE SHOTING OF MONTGOMERY BURNS</h2>
+                <h2>FOR QUESTIONING IN CONNECTION WITH THE SHOOTING OF MONTGOMERY BURNS</h2>
 
                 <img src='../images/bart/bart.gif' width='240'>
                 <img src='../images/bart/bart2.gif' width='400'>
