--- a/Week4_Day5_CSS/BART BOOTSTRAP/admin/create_new.html
+++ b/Week4_Day5_CSS/BART BOOTSTRAP/admin/create_new.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="row style">
                         <div class="col-12">
-                            <legend>Reward</legend>
+                            <legend>Description</legend>
                             <label class="block">
                                 Aliases: <br> <input type='text' name='aliases' size='15' maxlength='30'> <br>
                             </label>
@@ -72,7 +72,7 @@
                                 Birth: <br> <input type='text' name='birth' size='15' maxlength='30'> <br>
                             </label>
                             <label class="block">
-                                Heir: <br> <input type='text' name='heir' size='15' maxlength='30'> <br>
+                                Hair: <br> <input type='text' name='hair' size='15' maxlength='30'> <br>
                             </label>
                             <label class="block">
                                 Eyes: <br> <input type='text' name='eyes' size='15' maxlength='30'> <br>
