--- a/Week4_Day5_CSS/BART BOOTSTRAP/posters/bart.html
+++ b/Week4_Day5_CSS/BART BOOTSTRAP/posters/bart.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <h2>FOR QUESTIONING IN CONNECTION WITH THE SHOTING OF MONTGOMERY BURNS</h2>
+                        <h2>FOR QUESTIONING IN CONNECTION WITH THE SHOOTING OF MONTGOMERY BURNS</h2>
                     </div>
                 </div>
                 <div class="row">
