--- a/Project_CSS_Desktop/project2.html
+++ b/Project_CSS_Desktop/project2.html
@@ -3,7 +3,7 @@
 
 <head class>
     <title>BUILDESTATE</title>
-    <link rel="stylesheet" type="text/css" href="project2.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
     <meta name="viewport" content="width=device-width" , initial-scale=1.0>
     <link rel="icon" type="image/ico" href="pictures/favicon.ico">
 </head>
