--- a/Project_CSS_Desktop/project2.html
+++ b/Project_CSS_Desktop/project2.html
@@ -4,7 +4,7 @@
 <head class>
     <title>BUILDESTATE</title>
     <link rel="stylesheet" type="text/css" href="style2.css">
-    <meta name="viewport" content="width=device-width" , initial-scale=1.0>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/ico" href="pictures/favicon.ico">
 </head>
 
