--- a/Project_CSS_Responsive/project2.html
+++ b/Project_CSS_Responsive/project2.html
@@ -1,184 +1,115 @@
 <!DOCTYPE html>
 <html>
-
-<head class>
+  <head class>
     <title>BUILDESTATE</title>
-    <link rel="stylesheet" type="text/css" href="style2.css">
-    <meta name="viewport" content="width=device-width" , initial-scale=1.0>
-    <link rel="icon" type="image/ico" href="pictures/favicon.ico">
-</head>
+    <link rel="stylesheet" type="text/css" href="style2.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/ico" href="pictures/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-<body>
+  <body>
+    <div id="logo"><span>BUILD</span>ESTATE</div>
 
-    <header class="cf">
-        <h2><span>BUILD</span> ESTATE</h2>
-        <nav>
-            <ul class="cf">
-                <li>HOME</li>
-                <li>ABOUT</li>
-                <li>SERVICES</li>
-                <li>CONTACT US</li>
-            </ul>
-        </nav>
+    <div id="menu">
+      <ul>
+        <li class="menu_item"><a href="#">HOME</a></li>
+        <li class="menu_item"><a href="#">ABOUT</a></li>
+        <li class="menu_item"><a href="#">SERVICES</a></li>
+        <li class="menu_item"><a href="#">CONTACT US</a></li>
+      </ul>
+    </div>
 
-        <div id="headMain" class="cf">
-            <p>WE SHAPE OUR BUILDINGS THEREAFTER THEY SHAPE <br>US</p>
-            <span id="blueBox">Read More</span>
+    <div id="banner">
+      <img src="./pictures/banner3.jpg" alt="" id="" />
+      <p>WE SHAPE OUR BUILDINGS THEREFORE THEY SHAPE US</p>
+      <a href="#">Read More</a>
+    </div>
+
+    <div class="separator">
+      <p>Who We are</p>
+      <hr />
+    </div>
+
+    <div id="wwa" class="cf">
+      <div class="text">
+        <h3>Welcome To Our Build Estate</h3>
+        <p>
+          "If you can build buildings, why sit on the beach? We always think of
+          building in their settings, but so do other architects."
+        </p>
+        <ul class="lista">
+          <li>
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />International
+            Office Buildings.
+          </li>
+          <li>
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />Apartment On
+            Premier House.
+          </li>
+          <li>
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />Prices Are Low
+            & Parking Allowance.
+          </li>
+          <li>
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />Best Design
+            Architecture.
+          </li>
+        </ul>
+      </div>
+      <img id="photo" src="pictures/about.jpg" />
+      <div id="text_tablet" class="text">
+        <h3>Welcome To Our Build Estate</h3>
+        <p>
+          "For decades engineers have stood accused that their buildings do not
+          have any cultural value. We have attempted to liberate engineering of
+          this accusation."
+        </p>
+        <ul class="lista">
+          <li>
+            <img src="/pictures/arrow_bullet.png" alt="arrow" />International
+            Office Buildings
+          </li>
+          <li>
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />Apartment On
+            Premier House.
+          </li>
+          <li>
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />Prices Are Low
+            & Parking Allowance.
+          </li>
+          <li>
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />Best Design
+            Architecture.
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="separator">
+      <p>What People Say</p>
+      <hr />
+    </div>
+    <div id="wps" class="cf">
+      <div class="bluecard cf">
+        <img src="pictures/t1.jpg" alt="pic" />
+        <div class="header_and_stars">
+          <h1>WILLIAMSON</h1>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
         </div>
-
-    </header>
-
-
-
-    <main class="cf">
-
-
-
-        <div class="razd">
-            <h3>Who We Are</h3>
-            <hr>
-        </div>
-
-        <div id="firstUnder" class="cf">
-            <article class="main1" class="cf">
-                <h4>Welcome To Our Build Estate</h4>
-                <p>"If you can build buildings, why sit on the beach? We always think of buildings in their
-                    settings, but so do other architects."</p>
-                <ul>
-                    <li>International Office Buildings.</li>
-                    <li>Apartment On Premier House.</li>
-                    <li>Prices Are Low & Parking Allowance.</li>
-                    <li>Best Design Architecture.</li>
-                </ul>
-            </article>
-            <article class="main1" class="cf"><img src="./pictures/about.jpg" alt="">
-            </article>
-            <article class="main1" class="cf">
-                <h4>We Make Your Dream Home</h4>
-                <p>"For decades engineers have stood accused that their buildings do not have any cultural value. We
-                    have attempted to
-                    liberate engineering of this accusation."
-                </p>
-                <ul>
-                    <li>Great Engineers Ideas.</li>
-                    <li>Planning For Future Model Buildings.</li>
-                    <li>Modern Apartment With Large Space.</li>
-                    <li>New Residential Complex Features.</li>
-                </ul>
-            </article>
-
-        </div>
-
-
-
-        <div class="razd">
-            <h3>What People Says</h3>
-            <hr>
-        </div>
-
-        <div id="secondUnder" class="cf">
-            <article class="main2">
-                <ul class="cf">
-                    <li><img src="./pictures/t1.jpg" class="image"></li>
-                    <li>WILLIAMSON<br>
-                        <img src="./pictures/stars.png" class="stars"></li>
-                </ul>
-                <p>Nam tempus lobortis sem non ornare. Cubrabitur dignissim interdum sem, et mollis lorem. Mauris
-                    hendrerit, mi in aliquet egestas, nisi mi turpis.</p>
-            </article>
-            <article class="main2">
-                <ul class="cf">
-                    <li><img src="./pictures/t2.jpg" class="image"></li>
-                    <li>JENNIFER LOPEZ<br>
-                        <img src="./pictures/stars.png" class="stars"></li>
-                </ul>
-                <p>Nam tempus lobortis sem non ornare. Cubrabitur dignissim interdum sem, et mollis lorem. Mauris
-                    hendrerit, mi in aliquet egestas, nisi mi turpis.</p>
-            </article>
-            <article class="main2">
-                <ul class="cf">
-                    <li><img src="./pictures/t3.jpg" class="image"></li>
-                    <li>SELENA GOMEZ<br>
-                        <img src="./pictures/stars.png" class="stars"></li>
-                </ul>
-                <p>Nam tempus lobortis sem non ornare. Cubrabitur dignissim interdum sem, et mollis lorem. Mauris
-                    hendrerit, mi in aliquet egestas, nisi mi turpis.</p>
-
-            </article>
-
-        </div>
-
-        <div class="razd">
-            <h3>Get In Touch With Us</h3>
-            <hr>
-        </div>
-
-        <div id="contactDiv" class="cf">
-            <ul class="contactPage" class="cf">
-                <li id="contact">
-                    <h2>CONTACT US</h2>
-                    <p><img src="./pictures/phone.png">(+012) 000 123 3120</p>
-                    <p><img src="./pictures/email.jpg">mail@example.com</p>
-                </li>
-                <li id="connect">
-                    <h2>CONNECT US</h2>
-                    <p><img src="./pictures/facebook.ico"><img src="./pictures/twitter.png"><img
-                            src="./pictures/insta.png"><img src="./pictures/linkedin.png"></p>
-                </li>
-                <li id="address">
-                    <h2>ADDRESS</h2>
-                    <p><img src="./pictures/map.png">1680 Richmond St, Corner in, ON N58 <br> 3d7, USA</h2>
-                </li>
-                <li id="house"><img src="./pictures/house.png"></li>
-            </ul>
-
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d254508.51641062117!2d-74.24789190683227!3d4.648283717717461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9bfd2da6cb29%3A0x239d635520a33914!2sBogota%2C%20Colombia!5e0!3m2!1sen!2srs!4v1571999189320!5m2!1sen!2srs"
-                frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
-        </div>
-        <div class="razd">
-            <h3>Mail Us</h3>
-            <hr>
-        </div>
-
-        <div id="form">
-
-            <div id="textInputs">
-
-                <input type="text" name="name" class="mytext" id="name" placeholder="Name">
-                <input type="text" name="email" class="mytext" id="email" placeholder="Email">
-                <input type="text" name="telephone" class="mytext" id="telephone" placeholder="Telephone">
-
-            </div>
-
-            <div id="textArea">
-                <textarea type='text' id="mytextarea" name='message' placeholder='Message'></textarea>
-            </div>
-
-            <div id="buttoncontainer">
-                <input type="submit" id="button" value="Submit">
-            </div>
-
-        </div>
-    </main>
-
-    <footer class="cf">
-
-        <div id="navigation">
-            <nav>
-                <ul class="cf">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Stats</li>
-                    <li>Agents</li>
-                    <li>Testimonials</li>
-                </ul>
-            </nav>
-        </div>
-        <div class="copyright">&copy; 2017 Build Estate. All Rights Reserved</div>
-    </footer>
-</body>
-
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+          facilis sequi! Fugit laboriosam dolore eveniet corrupti at voluptates,
+          suscipit aut expedita similique explicabo ipsum distinctio.
+        </p>
+      </div>
+    
+    </div>
+  </body>
 </html>
