--- a/Week3_Day4_Day5_Project_CSS/project2.html
+++ b/Week3_Day4_Day5_Project_CSS/project2.html
@@ -4,7 +4,7 @@
 <head class>
     <title>BUILDESTATE</title>
     <link rel="stylesheet" type="text/css" href="project2.css">
-    <meta name="viewport" content="width=device-width" , initial-scale=1.0>
+    <meta name="viewport" content="width=device-width" initial-scale=1.0>
 </head>
 
 <body>
