--- a/Project_CSS_Responsive/project2.html
+++ b/Project_CSS_Responsive/project2.html
@@ -62,7 +62,7 @@
       </div>
       <img id="photo" src="pictures/about.jpg" />
       <div id="text_tablet" class="text">
-        <h3>Welcome To Our Build Estate</h3>
+        <h3>We Make Your Dream Home</h3>
         <p>
           "For decades engineers have stood accused that their buildings do not
           have any cultural value. We have attempted to liberate engineering of
@@ -70,7 +70,7 @@
         </p>
         <ul class="lista">
           <li>
-            <img src="/pictures/arrow_bullet.png" alt="arrow" />International
+            <img src="./pictures/arrow_bullet.png" alt="arrow" />International
             Office Buildings
           </li>
           <li>
@@ -109,7 +109,118 @@
           suscipit aut expedita similique explicabo ipsum distinctio.
         </p>
       </div>
-    
+      <div id="middlecard" class="bluecard cf">
+        <img src="./pictures/t2.jpg" alt="pic" />
+        <div class="header_and_stars">
+          <h1>JENNIFER LOPEZ</h1>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+          beatae veritatis pariatur quaerat facilis in aut? Animi distinctio
+          accusamus exercitationem esse soluta corrupti nesciunt atque!
+        </p>
+      </div>
+      <div class="bluecard cf">
+        <img src="./pictures/t3.jpg" alt="pic" />
+        <div class="header_and_stars">
+          <h1>SELENA GOMEZ</h1>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa cumque
+          modi dolore doloribus harum, inventore libero quae voluptatum
+          distinctio ipsam explicabo voluptatem deserunt reiciendis impedit.
+        </p>
+      </div>
+    </div>
+    <div class="separator">
+      <p>Get In Touch With Us</p>
+      <hr />
+    </div>
+    <div id="gitwu" class="cf">
+      <div id="green" class="card">
+        <p class="heading_of_card">CONTACT US</p>
+        <p id="phone">
+          <i class="fa fa-mobile-phone"></i><span>&nbsp +381 062 8278 771</span>
+        </p>
+        <p id="mail">
+          <i class="fa fa-envelope"></i><span>mail@example.com</span>
+        </p>
+      </div>
+      <div id="pink" class="card">
+        <p class="heading_of_card">CONNECT US</p>
+        <div id="social">
+          <i class="fa fa-facebook-f"></i>&nbsp
+          <i class="fa fa-twitter"></i>&nbsp
+          <i class="fa fa-instagram"></i>&nbsp
+          <i class="fa fa-linkedin"></i>
+        </div>
+      </div>
+      <div id="blue" class="card">
+        <p class="heading_of_card">ADDRESS</p>
+        <p id="location">
+          <i class="fa fa-map-marker"></i>&nbsp 1680 Richmond St, Corner in, ON
+          N58 3d7, USA
+        </p>
+      </div>
+      <div id="house"><img src="./pictures/house.png" /></div>
+    </div>
+    <div id="map" class="cf">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387193.305935303!2d-74.25986548248684!3d40.69714941932609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2z0IrRg9GY0L7RgNC6LCDQodGY0LXQtNC40ZrQtdC90LUg0JTRgNC20LDQstC1!5e0!3m2!1ssr!2srs!4v1572064872622!5m2!1ssr!2srs"
+        frameborder="0"
+        style="border:0;"
+        allowfullscreen=""
+      ></iframe>
+    </div>
+    <div class="separator">
+      <p>Mail Us</p>
+      <hr />
+    </div>
+    <div id="login_form" class="cf">
+      <form action="" class="cf">
+        <div id="top_form" class="cf">
+          <input class="input" type="text" name="name" placeholder="Name" />
+          <input
+            class="input_email input"
+            type="email"
+            name="email"
+            placeholder="Email"
+          />
+          <input class="input" type="number" name="phone" placeholder="Phone" />
+
+          <textarea
+            class="input_area"
+            name="message"
+            placeholder="Message"
+          ></textarea>
+        </div>
+        <input type="button" class="input_button" value="Submit" />
+      </form>
+    </div>
+    <div id="footer" class="cf">
+      <div id="footer_content">
+        <ul>
+          <li class="footer_item"><a href="home">Home</a></li>
+          <li class="footer_item"><a href="about">About</a></li>
+          <li class="footer_item"><a href="home">Services</a></li>
+          <li class="footer_item"><a href="stats">Stats</a></li>
+          <li class="footer_item"><a href="agents">Agents</a></li>
+          <li class="footer_item"><a href="testimonials">Testimonials</a></li>
+        </ul>
+        <p>
+          <i class="fa fa-copyright"></i> 2017 Build Estate. All Rights Reserved
+        </p>
+      </div>
     </div>
   </body>
 </html>
