--- a/Week5_Day5_JS/events.html
+++ b/Week5_Day5_JS/events.html
@@ -13,9 +13,7 @@
 
 
     <div id="wrapper">
-        <p>Ovo je prvi pasus.</p>
-        <p>Ovo je drugi pasus.</p>
-        <input id="first_button" type="button" onclick="changeBackgroundColor()" value="Click me">
+        <input id="first_button" type="button" onclick="changeBackgroundColor()" value="Toggle Background">
         <input id="second_button" type="button" onclick="turnOff()" value="Turn Off">
     </div>
     <input id="input" type="text">
