football playground finished

--- a/Week5_Day5_JS/football_playground_version_improved/footballPlayGround2.html
+++ b/Week5_Day5_JS/football_playground_version_improved/footballPlayGround2.html
@@ -9,8 +9,15 @@
   </head>
 
   <body>
-    <img id="field" src="./images/field.png" alt="teren" />
-    <img id="player" src="./images/player.png" alt="igrac" />
+  
+    <div id="field">
+    <img id="player" src="./images/player.png">
+    <input id="button" type="button" onclick="removeHandler()" value="Stop Moving" />
+    </div>
+
+    
+
+    
 
     <script type="text/javascript" src="./footballPlayGround2.js"></script>
   </body>
