--- a/Project_CSS_Responsive/project2.html
+++ b/Project_CSS_Responsive/project2.html
@@ -2,7 +2,7 @@
 
 
 <head class>
-    <title>BUILDESTATE</title>
+    <title>Build Estate</title>
     
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
