--- a/Project_CSS_Responsive/index.html
+++ b/Project_CSS_Responsive/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/ico" href="./pictures/favicon.ico">
     
-    <link rel="stylesheet" media="(max-width: 767px)" type="text/css" href="./css/style2.css">
+    <link rel="stylesheet" media="(max-width: 767px)" type="text/css" href="./css/mobile.css">
     <link rel="stylesheet" media="(min-width: 1200px)" type="text/css" href="./css/desk.css">
     <link rel="stylesheet" media="(min-width: 768px) and (max-width: 1199px)" type="text/css" href="./css/tablet.css">
 </head>
